--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/papers/cv.pdf">CV</a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/teaching.html">Teaching</a></p></h3>
 	<p class="view"><img src="dh2022.png" width=270 height=270></p>
-	<p>I am a Ph.D. candidate in Finance at the David Eccles School of Business, University of Utah. If you need to reach me, please email me at da.huang at eccles dot utah do edu. </p>
+	<p>I am a Ph.D. candidate in Finance at the David Eccles School of Business, University of Utah. If you need to reach me, please email me at da.huang at eccles dot utah do edu. test </p>
       </header>
       <section>
         <h3><a id="updates" class="anchor" href="#updates" aria-hidden="true"><span class="octicon octicon-link"></span></a>About me:</h3>
