--- a/papers.html
+++ b/papers.html
@@ -77,7 +77,7 @@
         <h3><p class="view"><a href="https://dahuang-finance.github.io/papers.html">Research</a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/papers/cv.pdf">CV</a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/teaching.html">Teaching</a></p></h3>
-	<p class="view"><img src="dh2022.png" width=270 height=270></p>
+	<p class="view"><img src="dh2016.jpg" width=270 height=360></p>
 	<p>I am a Ph.D. candidate in Finance at the David Eccles School of Business, University of Utah. If you need to reach me, please email me at da.huang at eccles dot utah do edu. </p>
       </header>
       <section>
