--- a/research.html
+++ b/research.html
@@ -82,7 +82,7 @@
       </header>
       <section>
 	<h3> Job Market Paper</h3>	
-	<p style="margin:0;"><p > <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4190266">Passive Investing and Mutual Fund Skill, Survival, and Risk-Taking
+	<p style="margin:0;"><p > <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4190266"><b>Passive Investing and Mutual Fund Skill, Survival, and Risk-Taking</b></a> <br>
 	Abstract: <br> This paper examines how the rise of passive investing affects active management. I develop a parsimonious model of passive and active investment in which greater passive investment accelerates investors' learning about active managers' skill. The model provides a rational explanation, namely the rise of passive investing, for several empirical observations: A more skilled active mutual fund industry, more closet indexing by active funds, and compression of the performance distribution of active investing. I test the model's predictions using a novel shift-share instrumental variable design and show they are borne out in the data. I also find that high levels of passive investing improve market efficiency, consistent with a more skilled active mutual fund industry. </p>
 
 	<br>
