--- a/teaching.html
+++ b/teaching.html
@@ -22,9 +22,13 @@
       </header>
       <section>
         <h3><a id="updates" class="anchor" href="#updates" aria-hidden="true"><span class="octicon octicon-link"></span></a>About me:</h3>
-	<p> I am an empirical researcher interested in the role of institutional investors in the economy, with a particular focus on passive funds, exchange traded funds, and high-frequency traders. </p>
-	<p> I am a Ph.D. candidate in Finance at the David Eccles School of Business, University of Utah. I am on the job market in the 2022-2023 academic year and will be at AFA/ASSA 2023 Annual Meeting in New Orleans, LA. </p>
-	<p> My job market paper is <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4190266">"Passive Investing and Mutual Fund Skill, Survival, and Risk-Taking."</a> My CV is available <a href="https://dahuang-finance.github.io/papers/cv.pdf">here</a>. </p>
+	<p> <b>FINAN 3050 - Introduction to Investment</b>, as instructor </p>
+	<p> I taught the class in Spring 2021 in hybrid format during the challenging Covid time. The class is for undergraduate students in finance major and introduces the theory and practice of investments from the point of view of a portfolio manager. Topics covered in the class include Capital Asset Pricing Model (CAPM), Markowitz optimization, performance evaluation, mutual funds, market efficiency, etc.  </p>
+	<p> Here is the <a href="https://dahuang-finance.github.io/teaching/FINAN3050/Syllabus_Huang_3050_Spring_2021.pdf">syllabus </a>, the <a href="https://dahuang-finance.github.io/teaching/FINAN3050/final_exam_solution.pdf">final exam</a> with solution, and a <a href="https://dahuang-finance.github.io/teaching/FINAN3050/two_assets_optimizer.xlsx">portfolio optimization tool</a> I built for students. </p>
+	<br>
+	<p> <b>FINAN 7850 - Advanced Empirical Asset Pricing</b>, as teaching assistent (<a href="https://brogaard.utah.edu/teaching/">Jonathan Brogaard</a> as instructor) </p>
+	<p> This class is designed for second year finance Ph.D. students and covers recent influential papers in asset pricing and market microstructure. I was the teaching assistent for the class in Fall 2020, 2021, and 2022. I grade weekly replication assignments in Stata, SAS, Python, and R and answer my junior colleagues' questions about the papers covered in the class in assistance of Professor Brogaard.   </p>
+	<p> Here is the <a href="https://dahuang-finance.github.io/teaching/FINAN7850/Syllabus_Brogaard_7850_Fall_2019.pdf">syllabus </a> of the class when I took it in my second year. </p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
