--- a/teaching.html
+++ b/teaching.html
@@ -21,7 +21,7 @@
 	<p>I am a Ph.D. candidate in Finance at the David Eccles School of Business, University of Utah. If you need to reach me, please email me at da.huang at eccles dot utah dot edu. </p>
       </header>
       <section>
-        <h3><a id="updates" class="anchor" href="#updates" aria-hidden="true"><span class="octicon octicon-link"></span></a>About me:</h3>
+        <h3><a id="updates" class="anchor" href="#updates" aria-hidden="true"><span class="octicon octicon-link"></span></a>University of Utah:</h3>
 	<p> <b>FINAN 3050 - Introduction to Investment</b>, as instructor </p>
 	<p> I taught the class in Spring 2021 in hybrid format during the challenging Covid time. The class is for undergraduate students in finance major and introduces the theory and practice of investments from the point of view of a portfolio manager. Topics covered in the class include Capital Asset Pricing Model (CAPM), Markowitz optimization, performance evaluation, mutual funds, market efficiency, etc.  </p>
 	<p> Here is the <a href="https://dahuang-finance.github.io/teaching/FINAN3050/Syllabus_Huang_3050_Spring_2021.pdf">syllabus </a>, the <a href="https://dahuang-finance.github.io/teaching/FINAN3050/final_exam_solution.pdf">final exam</a> with solution, and a <a href="https://dahuang-finance.github.io/teaching/FINAN3050/two_assets_optimizer.xlsx">portfolio optimization tool</a> I built for students. </p>
