--- a/research.html
+++ b/research.html
@@ -75,7 +75,7 @@
         <p>Ph.D. Candidate in Finance</p>
         <h3><p class="view"><a href="https://dahuang-finance.github.io/">Home</a></p></h3>
         <h3><p class="view"><a href="https://dahuang-finance.github.io/research.html">Research</a></p></h3>
-	<h3><p class="view"><a href="https://dahuang-finance.github.io/research/cv.pdf">CV</a></p></h3>
+	<h3><p class="view"><a href="https://dahuang-finance.github.io/research/cv_20221105.pdf">CV</a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/teaching.html">Teaching</a></p></h3>
 	<p class="view"><img src="dh2016.jpg" width=270 height=360></p>
 	<p>I am a Ph.D. candidate in Finance at the David Eccles School of Business, University of Utah. If you need to reach me, please email me at da.huang at eccles dot utah do edu. </p>
