--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h3><a id="updates" class="anchor" href="#updates" aria-hidden="true"><span class="octicon octicon-link"></span></a>About me:</h3>
 	<p> I am an empirical researcher interested in the role of institutional investors in the economy, with a particular focus on passive funds, exchange traded funds, and high-frequency traders. </p>
 	<p> I am a Ph.D. candidate in Finance at the David Eccles School of Business, University of Utah. I am on the job market in the 2022-2023 academic year and will be at AFA/ASSA 2023 Annual Meeting in New Orleans, LA. </p>
-	<p> My job market paper is <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4190266">"Passive Investing and Mutual Fund Skill, Survival, and Risk-Taking."</a> My CV is available <a href="https://dahuang-finance.github.io/papers/cv_20221105.pdf">here</a>. </p>
+	<p> My job market paper is <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4190266">"Passive Investing and Mutual Fund Skill, Survival, and Risk-Taking."</a> My CV is available <a href="https://dahuang-finance.github.io/research/cv_20221105.pdf">here</a>. </p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
