--- a/teaching.html
+++ b/teaching.html
@@ -22,7 +22,7 @@
       </header>
       <section>
         <h3><a id="updates" class="anchor" href="#updates" aria-hidden="true"><span class="octicon octicon-link"></span></a>University of Utah:</h3>
-	<p> <b>FINAN 3050 - Introduction to Investment</b>, as instructor </p>
+	<p> <b>FINAN 3050 - Introduction to Investments</b>, as instructor </p>
 	<p> I taught the class under a hybrid format in Spring 2021. The class is designed to familiarize undergraduate finance students with introductory finance theory and practice from the point of view of a portfolio manager. Topics covered in the class include Capital Asset Pricing Model (CAPM), Markowitz optimization, performance evaluation, mutual funds, market efficiency, etc.  </p>
 	<p> Here is the <a href="https://dahuang-finance.github.io/teaching/FINAN3050/Syllabus_Huang_3050_Spring_2021.pdf">syllabus </a>, the <a href="https://dahuang-finance.github.io/teaching/FINAN3050/exam_solution.pdf">final exam</a> with solutions, and a <a href="https://dahuang-finance.github.io/teaching/FINAN3050/assets_optimizer.xlsx">portfolio optimization tool</a> I built for students. </p>
 	<br>
