--- a/teaching.html
+++ b/teaching.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Da Huang by dahuang-finance</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
   </head>
@@ -15,10 +16,11 @@
         <p>Ph.D. Candidate in Finance</p>
         <h3><p class="view"><a href="https://dahuang-finance.github.io/">Home</a></p></h3>
         <h3><p class="view"><a href="https://dahuang-finance.github.io/research.html">Research</a></p></h3>
-	<h3><p class="view"><a href="https://dahuang-finance.github.io/research/cv_20221105.pdf">CV</a></p></h3>
+        <h3><p class="view"><a href="https://dahuang-finance.github.io/research.html">Replication Code</a></p></h3>
+	<h3><p class="view"><a href="https://dahuang-finance.github.io/research/cv_20221107.pdf">CV</a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/teaching.html">Teaching</a></p></h3>
 	<p class="view"><img src="dh2016.jpg" width=270 height=360></p>
-	<p>I am a Ph.D. candidate in Finance at the David Eccles School of Business, University of Utah. If you need to reach me, please email me at da.huang at eccles dot utah dot edu. </p>
+	<p>I am a Ph.D. candidate in Finance at the University of Utah’s David Eccles School of Business. If you need to reach me, please email me at da dot huang at eccles dot utah dot edu. </p>
       </header>
       <section>
         <h3><a id="updates" class="anchor" href="#updates" aria-hidden="true"><span class="octicon octicon-link"></span></a>University of Utah:</h3>
@@ -28,6 +30,10 @@
 	<br>
 	<p> <b>FINAN 7850 - Advanced Empirical Asset Pricing</b>, as teaching assistant (<a href="https://brogaard.utah.edu/teaching/">Jonathan Brogaard</a> as instructor) </p>
 	<p> This class is designed for second year finance Ph.D. students and covers recent influential papers in asset pricing and market microstructure. I was the teaching assistent for the class in Fall 2020, 2021, and 2022. I grade weekly replication assignments in Stata, SAS, Python, and R and answer my junior colleagues' questions about the papers covered in the class in assistance of Professor Brogaard.   </p>
+	<p> Here is the <a href="https://dahuang-finance.github.io/teaching/FINAN7850/Syllabus_Brogaard_7850_Fall_2019.pdf">syllabus </a> of the class when I took it in my second year. </p>
+	<br>
+	<p> <b>FINAN 6122 - Advanced Finance</b> </p>
+	<p> This class is course applies in a case-based setting several of the core concepts of finance for executive MBAs. <a href="https://brogaard.utah.edu/teaching/">Jonathan Brogaard</a> and I coauthored a case study about smart beta and factor investing for the class. Please contact us if you are interested in using it in your class.   </p>
 	<p> Here is the <a href="https://dahuang-finance.github.io/teaching/FINAN7850/Syllabus_Brogaard_7850_Fall_2019.pdf">syllabus </a> of the class when I took it in my second year. </p>
       </section>
     </div>
