--- a/research.html
+++ b/research.html
@@ -79,7 +79,7 @@
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/research/cv_20221107.pdf">CV</a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/teaching.html">Teaching</a></p></h3>
 	<p class="view"><img src="dh2016.jpg" width=270 height=360></p>
-	<p>I am a Ph.D. candidate in Finance at the University of Utah’s David Eccles School of Business. If you need to reach me, please email me at da dot huang at eccles dot utah do edu. </p>
+	<p>I am a Ph.D. candidate in Finance at the University of Utah’s David Eccles School of Business. If you need to reach me, please email me at da dot huang at eccles dot utah dot edu. </p>
       </header>
       <section>
 	<br>
