--- a/teaching.html
+++ b/teaching.html
@@ -26,15 +26,15 @@
 	<br>
         <h3><a id="updates" class="anchor" href="#updates" aria-hidden="true"><span class="octicon octicon-link"></span></a>University of Utah:</h3>
 	<p> <b>FINAN 3050 - Introduction to Investments</b>, as instructor </p>
-	<p> I taught the class under a hybrid format in Spring 2021. The class is designed to familiarize undergraduate finance students with introductory finance theory and practice from the point of view of a portfolio manager. Topics covered in the class include Capital Asset Pricing Model (CAPM), Markowitz optimization, performance evaluation, mutual funds, market efficiency, etc.  </p>
+	<p> I taught the course under a hybrid format in Spring 2021. The class is designed to familiarize undergraduate finance students with introductory finance theory and practice from the point of view of a portfolio manager. Topics covered in the class include Capital Asset Pricing Model (CAPM), Markowitz optimization, performance evaluation, mutual funds, market efficiency, etc.  </p>
 	<p> Here is the <a href="https://dahuang-finance.github.io/teaching/FINAN3050/Syllabus_Huang_3050_Spring_2021.pdf">syllabus </a>, the <a href="https://dahuang-finance.github.io/teaching/FINAN3050/exam_solution.pdf">final exam</a> with solutions, and a <a href="https://dahuang-finance.github.io/teaching/FINAN3050/assets_optimizer.xlsx">portfolio optimization tool</a> I built for students. </p>
 	<br>
 	<p> <b>FINAN 7850 - Advanced Empirical Asset Pricing</b>, as teaching assistant (<a href="https://brogaard.utah.edu/teaching/">Jonathan Brogaard</a> as instructor) </p>
-	<p> This class is designed for second year finance Ph.D. students and covers recent influential papers in asset pricing and market microstructure. I was the teaching assistent for the class in Fall 2020, 2021, and 2022. I grade weekly replication assignments in Stata, SAS, Python, and R and answer my junior colleagues' questions about the papers covered in the class in assistance of Professor Brogaard.   </p>
+	<p> This course is designed for second year finance Ph.D. students and covers recent influential papers in asset pricing and market microstructure. I was the teaching assistent for the class in Fall 2020, 2021, and 2022. I grade weekly replication assignments in Stata, SAS, Python, and R and answer my junior colleagues' questions about the papers covered in the class in assistance of Professor Brogaard.   </p>
 	<p> Here is the <a href="https://dahuang-finance.github.io/teaching/FINAN7850/Syllabus_Brogaard_7850_Fall_2019.pdf">syllabus </a> of the class when I took it in my second year. </p>
 	<br>
 	<p> <b>FINAN 6122 - Advanced Finance</b> </p>
-	<p> This class is course applies in a case-based setting several of the core concepts of finance for executive MBAs. <a href="https://brogaard.utah.edu/teaching/">Jonathan Brogaard</a> and I coauthored a case study about smart beta and factor investing for the class. Please contact us if you are interested in using it in your class.   </p>
+	<p> This course applies in a case-based setting several of the core concepts of finance for executive MBAs. <a href="https://brogaard.utah.edu/teaching/">Jonathan Brogaard</a> and I coauthored a case study about smart beta and factor investing for the class. Please contact us if you are interested in using it in your class.   </p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
