--- a/code.html
+++ b/code.html
@@ -24,7 +24,7 @@
       </header>
       <section>
 	<br>
-        <h3><a id="updates" class="anchor" href="#updates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Coming soon...</h3>
+        <h3><a id="updates" class="anchor" href="#updates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Coming soon.</h3>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
