--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header>
         <h1>Da Huang</h1>
         <p>Ph.D. Candidate in Finance</p>
-        <h3><p class="view"><a href="https://dahuang-finance.github.io/">Home</a></p></h3>
+	      <h3><p class="view"><a href="https://dahuang-finance.github.io/"><b>Home</b></a></p></h3>
         <h3><p class="view"><a href="https://dahuang-finance.github.io/research.html">Research</a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/code.html">Replication Code</a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/research/cv_20221108.pdf">CV</a></p></h3>
