--- a/code.html
+++ b/code.html
@@ -16,7 +16,7 @@
         <p>Ph.D. Candidate in Finance</p>
         <h3><p class="view"><a href="https://dahuang-finance.github.io/">Home</a></p></h3>
         <h3><p class="view"><a href="https://dahuang-finance.github.io/research.html">Research</a></p></h3>
-        <h3><p class="view"><a href="https://dahuang-finance.github.io/code.html">Replication Code</a></p></h3>
+        <h3><p class="view"><a href="https://dahuang-finance.github.io/code.html"><b>Replication Code</b></a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/research/cv_20221108.pdf">CV</a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/teaching.html">Teaching</a></p></h3>
 	<p class="view"><img src="dh2016.jpg" width=270 height=360></p>
