--- a/research.html
+++ b/research.html
@@ -74,7 +74,7 @@
         <h1>Da Huang</h1>
         <p>Ph.D. Candidate in Finance</p>
         <h3><p class="view"><a href="https://dahuang-finance.github.io/">Home</a></p></h3>
-        <h3><p class="view"><a href="https://dahuang-finance.github.io/research.html">Research</a></p></h3>
+        <h3><p class="view"><a href="https://dahuang-finance.github.io/research.html"><b>Research</b></a></p></h3>
         <h3><p class="view"><a href="https://dahuang-finance.github.io/code.html">Replication Code</a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/research/cv_20221108.pdf">CV</a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/teaching.html">Teaching</a></p></h3>
