--- a/teaching.html
+++ b/teaching.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Da Huang - teaching </title>
+    <title>Da Huang - Teaching </title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="stylesheets/styles.css">
