--- a/index.html
+++ b/index.html
@@ -13,21 +13,19 @@
     <div class="wrapper">
       <header>
         <h1>Da Huang</h1>
-        <p>Ph.D. Candidate in Finance</p>
+        <p>Assistant Professor in Finance</p>
 	      <h3><p class="view"><a href="https://dahuang-finance.github.io/"><b>Home</b></a></p></h3>
         <h3><p class="view"><a href="https://dahuang-finance.github.io/research.html">Research</a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/code.html">Replication Code</a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/research/CV.pdf">CV</a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/teaching.html">Teaching</a></p></h3>
 	<p class="view"><img src="dh2016.jpg" width=270 height=360></p>
-	<p>I am a Ph.D. candidate in Finance at the University of Utah’s David Eccles School of Business. If you need to reach me, please email me at da dot huang at eccles dot utah dot edu. </p>
+	<p>I am an assistant professor in finance at Northeastern University's D'Amore-McKim School of Business. If you need to reach me, please email me at da dot huang at northeastern dot edu. </p>
       </header>
       <section>
 	<br>
         <h3><a id="updates" class="anchor" href="#updates" aria-hidden="true"><span class="octicon octicon-link"></span></a>About me:</h3>
-	<p> I am an empirical researcher interested in the role of institutional investors in the economy, with a particular focus on passive funds, exchange traded funds, and high-frequency traders. </p>
-	<p> I am a Ph.D. candidate in Finance at the David Eccles School of Business of the University of Utah. I am on the job market in the 2022-2023 academic year and will be at AFA/ASSA 2023 Annual Meeting in New Orleans, LA. </p>
-	<p> My job market paper is titled <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4190266">"Passive Investing and Mutual Fund Skill, Survival, and Risk-Taking."</a> My CV is available <a href="https://dahuang-finance.github.io/research/CV.pdf">here</a>. </p>
+	<p> I am an empirical researcher interested in the role of institutional investors in the economy, with a particular focus on passive funds, exchange-traded funds, and high-frequency traders. </p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
