--- a/teaching.html
+++ b/teaching.html
@@ -13,16 +13,21 @@
     <div class="wrapper">
       <header>
         <h1>Da Huang</h1>
-        <p>Ph.D. Candidate in Finance</p>
+        <p>Assistant Professor in Finance</p>
         <h3><p class="view"><a href="https://dahuang-finance.github.io/">Home</a></p></h3>
         <h3><p class="view"><a href="https://dahuang-finance.github.io/research.html">Research</a></p></h3>
         <h3><p class="view"><a href="https://dahuang-finance.github.io/code.html">Replication Code</a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/research/CV.pdf">CV</a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/teaching.html"><b>Teaching</b></a></p></h3>
 	<p class="view"><img src="dh2016.jpg" width=270 height=360></p>
-	<p>I am a Ph.D. candidate in Finance at the University of Utah’s David Eccles School of Business. If you need to reach me, please email me at da dot huang at eccles dot utah dot edu. </p>
+	<p>I am an assistant professor in finance at Northeastern University's D'Amore-McKim School of Business. If you need to reach me, please email me at da dot huang at northeastern dot edu. </p>
       </header>
       <section>
+	<br>
+        <h3><a id="updates" class="anchor" href="#updates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Northeastern University:</h3>
+	<p> <b>FINA 3303 - Investments</b>, as instructor </p>
+	<p> The class is designed to familiarize undergraduate finance students with introductory finance theory and practice from the point of view of a portfolio manager. Topics covered in the class include Capital Asset Pricing Model (CAPM), Markowitz optimization, performance evaluation, mutual funds, market efficiency, etc.  </p>
+	<p> A sample of student evaluation can be found here. </p>
 	<br>
         <h3><a id="updates" class="anchor" href="#updates" aria-hidden="true"><span class="octicon octicon-link"></span></a>University of Utah:</h3>
 	<p> <b>FINAN 3050 - Introduction to Investments</b>, as instructor </p>
