--- a/research.html
+++ b/research.html
@@ -84,7 +84,7 @@
       <section>
 	<br>
 	<h3> Working Papers</h3>
-	<p style="margin:0;"><p > <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4190266"><b>The Rise of Passive Investing and Active Mutual Fund Skill</b></a> &nbsp &nbsp &nbsp<button class="accordion">  Abstract	</button>
+	<p style="margin:0;"><p > <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4190266"><b>The Rise of Passive Investing and Active Mutual Fund Skill</b></a> <br> &nbsp &nbsp &nbsp<button class="accordion">  Abstract	</button>
 	<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"> How does passive investing affect active management? A simple model shows and the empirical results demonstrate that as passive investment rises, investors identify the skill of active managers faster, leading unskilled managers to exit the active mutual fund industry. Because unskilled active managers increase noise in stock prices, greater passive investing improves market efficiency as unskilled managers exit. These findings reconcile increasing closet indexing and fund homogenization, which could imply a lack of skill, with the literature that documents that skill exists in the active mutual fund industry. </div></p>
 	      
 	<p style="margin:0;"><p > <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3510359"><b>ETF Sampling and Index Arbitrage</b></a> <br> with <a href="https://brogaard.utah.edu/">Jonathan Brogaard</a> and <a href="https://davidsontheath.github.io/">Davidson Heath</a>, <i><b>Revise and Resubmit, Journal of Financial and Quantitative Analysis </b></i>&nbsp &nbsp &nbsp<button class="accordion">  Abstract	</button>
