--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/research/CV.pdf">CV</a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/teaching.html">Teaching</a></p></h3>
 	<p class="view"><img src="dh2016.jpg" width=270 height=360></p>
-	<p>I am an assistant professor in finance at Northeastern University's D'Amore-McKim School of Business. If you need to reach me, please email me at da dot huang at northeastern dot edu. </p>
+	<p>I am an assistant professor in finance at Northeastern University's D'Amore-McKim School of Business. If you need to reach me, please email me at da dot huang at northeastern.edu. </p>
       </header>
       <section>
 	<br>
