--- a/teaching.html
+++ b/teaching.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
       <header>
         <h1>Da Huang</h1>
-        <p>Assistant Professor in Finance</p>
+        <p>Assistant Professor of Finance</p>
         <h3><p class="view"><a href="https://dahuang-finance.github.io/">Home</a></p></h3>
         <h3><p class="view"><a href="https://dahuang-finance.github.io/research.html">Research</a></p></h3>
 	<h3><p class="view"><a href="https://dahuang-finance.github.io/research/CV.pdf">CV</a></p></h3>
