--- a/research.html
+++ b/research.html
@@ -85,7 +85,7 @@
 	<h3> Working Papers</h3>
 	<p style="margin:0;"><p > <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4190266"><b>The Rise of Passive Investing and Active Mutual Fund Skill</b></a> &nbsp &nbsp (Updated June 2024)  <br> 
 		<i><b>Revise and Resubmit, Journal of Financial and Quantitative Analysis </b></i> <br>
-		<button class="accordion"> Abstract </button>
+		<button class="accordion" style="margin-bottom:0;">Abstract</button>
 		<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"> This paper shows that the rise of passive investing makes the active mutual fund industry more skilled. Greater passive investing makes it easier for active funds to outperform the benchmark and accelerates the exit of underperforming funds. In response, skilled managers take less risk to outperform more consistently. Since unskilled active managers introduce noise into stock prices, accelerating their exit improves market efficiency. These findings reconcile the rise of passive investing, closet indexing, and fund homogenization, which may imply a lack of skill, with the literature documenting the presence of skills in the active mutual fund industry. </div>
       		Presentations: University of Utah, Northeastern University. </p>
 	      
