--- a/research.html
+++ b/research.html
@@ -24,7 +24,9 @@
       background-color: #f8f8f8;
       }
       button.accordion {
-      font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 14px;
+      line-height: 1.1;
       cursor: pointer;
       padding: 0px;
       border: none;
