--- a/research.html
+++ b/research.html
@@ -89,13 +89,6 @@
 		Revise and Resubmit, <i><b>Journal of Financial and Quantitative Analysis </b></i> &nbsp &nbsp &nbsp<button class="accordion">Abstract</button> </p>
 		<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"> This paper shows that the rise of passive investing makes the active mutual fund industry more skilled. Greater passive investing makes it easier for active funds to outperform the benchmark and accelerates the exit of underperforming funds. In response, skilled managers take less risk to outperform more consistently. Since unskilled active managers introduce noise into stock prices, accelerating their exit improves market efficiency. These findings reconcile the rise of passive investing, closet indexing, and fund homogenization, which may imply a lack of skill, with the literature documenting the presence of skills in the active mutual fund industry. </div>
 	<p style="margin:0;margin-bottom: 30px;"><b>Presentations:</b> University of Utah, Northeastern University.</p>
-
-	      
-	<p style="margin:0;margin-bottom: -0px;"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3510359"><b>ETF Sampling and Index Arbitrage</b></a> &nbsp (Updated October 2024)<br>
-		with <a href="https://brogaard.utah.edu/">Jonathan Brogaard</a> and <a href="https://davidsontheath.github.io/">Davidson Heath</a>, Revise and Resubmit (4th Round), <i><b>Journal of Financial and Quantitative Analysis </b></i> &nbsp &nbsp &nbsp<button class="accordion">Abstract</button> </p>
-		<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"> This paper shows that exchange-traded funds (ETFs) "sample" their indexes, systematically underweighting or omitting illiquid index stocks. As a result, arbitrage activity between the ETF and its index has heterogeneous effects on underlying asset markets. Using an instrumental variables approach, we find that the trading activity of ETFs reduces liquidity and price efficiency and increases volatility and co-movement for liquid stocks, but has no effect on illiquid stocks. Our results demonstrate that the effects of passive investing on asset markets depend on how passive funds replicate their target index. </div> 
-	<p style="margin:0;margin-bottom: 30px;"><b>Presentations:</b> IEX Academic Conference 2019, University of Utah, Financial Management Association 2021, European Finance Association 2021, American Finance Association 2022. </p>
-
 	      
 	<p style="margin:0;margin-bottom: -0px;"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4332670"><b>Property Tax Limitations, Covariance Risk, and Mortgage Distress</b></a>&nbsp (Updated April 2025)<br>
 		with <a href="https://www.lebow.drexel.edu/people/sebastienbradley">Sebastien Bradley</a> and <a href="https://www.nathanseegert.com/">Nathan Seegert</a> &nbsp &nbsp &nbsp<button class="accordion">Abstract</button></p>
@@ -115,14 +108,14 @@
 	<p style="margin:0;margin-bottom: 30px;"><b>Presentations:</b> University of Utah, Future of Financial Information Conference 2025. </p>
 
 
-<!-- 	<br>
-	<h3> Work in Progress</h3>
-	<p style="margin:0;"><p > <b>Illiquidity-Driven Option Return Predictability</b><br> with <a href="https://brogaard.utah.edu/">Jonathan Brogaard</a> and <a href="https://giesbusiness.illinois.edu/profile/neil-pearson">Neil Pearson</a> &nbsp &nbsp &nbsp<button class="accordion">  Abstract	</button>
-	<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"> Empirical asset pricing literature views illiquid assets as a "bug" because they add noise and bias to analyses of return predictability. In this paper, we show that illiquidity is a feature rather than a bug for option return predictability. Previously well-documented trading strategies with high Sharpe ratio become unprofitable once we purge illiquid options from the analyses. Illiquidity is the source of return predictability. Our results are robust to varies microstructure bias corrections, suggesting thinly-traded and heavily-traded options are fundamentally different. Our results have important implications for future empirical research in option markets. </div></p>
 
-	<p style="margin:0;"><p > <b>Pricing Property Tax Risk</b> <br> with <a href="https://www.lebow.drexel.edu/people/sebastienbradley">Sebastien Bradley</a> and <a href="https://www.nathanseegert.com/">Nathan Seegert</a> &nbsp &nbsp &nbsp<button class="accordion">  Abstract	</button>
-	<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"> We develop a method of pricing tax risk using a Arrow-Debreu model combined with a detailed tax model. To demonstrate this method, we build a tax simulation model for property taxes in the United States that captures key features that differ across states and change the risk associated with the property tax. In this context, we conceptualize property tax payments as the payouts of a complex asset that differ across states of the world. We then simply price these payouts using an Arrow-Debreu pricing model. Pricing tax risk in this way has several important applications and is easily implemented. </div></p>
- -->
+	<h3> Published and Forthcoming Papers</h3>
+	<p style="margin:0;margin-bottom: -0px;"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3510359"><b>ETF Sampling and Index Arbitrage</b></a> &nbsp (Updated April 2025)<br>
+		with <a href="https://brogaard.utah.edu/">Jonathan Brogaard</a> and <a href="https://davidsontheath.github.io/">Davidson Heath</a>, Forthcoming, <i><b>Journal of Financial and Quantitative Analysis </b></i> &nbsp &nbsp &nbsp<button class="accordion">Abstract</button> </p>
+		<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"> This paper shows that exchange-traded funds (ETFs) "sample" their indexes, systematically underweighting or omitting illiquid index stocks. As a result, arbitrage activity between the ETF and its index has heterogeneous effects on underlying asset markets. Using an instrumental variables approach, we find that the trading activity of ETFs reduces liquidity and price efficiency and increases volatility and co-movement for liquid stocks, but has no effect on illiquid stocks. Our results demonstrate that the effects of passive investing on asset markets depend on how passive funds replicate their target index. </div> 
+	<p style="margin:0;margin-bottom: 30px;"><b>Presentations:</b> IEX Academic Conference 2019, University of Utah, Financial Management Association 2021, European Finance Association 2021, American Finance Association 2022. </p>
+
+
 
 	<br>
 	<h3> Other Publications and Inactive Working Papers</h3>
