--- a/research.html
+++ b/research.html
@@ -86,7 +86,7 @@
 	<br>
 	<h3> Working Papers</h3>
 	<p style="margin:0;margin-bottom: -0px;"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4190266"><b>The Rise of Passive Investing and Active Mutual Fund Skill</b></a> &nbsp (Updated June 2024)<br>
-		Revise and Resubmit, <b><i>Journal of Financial and Quantitative Analysis </i></b> &nbsp &nbsp &nbsp<button class="accordion">Abstract</button> </p>
+		Revise and Resubmit, <b>Journal of Financial and Quantitative Analysis </b> &nbsp &nbsp &nbsp<button class="accordion">Abstract</button> </p>
 		<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"> This paper shows that the rise of passive investing makes the active mutual fund industry more skilled. Greater passive investing makes it easier for active funds to outperform the benchmark and accelerates the exit of underperforming funds. In response, skilled managers take less risk to outperform more consistently. Since unskilled active managers introduce noise into stock prices, accelerating their exit improves market efficiency. These findings reconcile the rise of passive investing, closet indexing, and fund homogenization, which may imply a lack of skill, with the literature documenting the presence of skills in the active mutual fund industry. </div>
 	<p style="margin:0;margin-bottom: 30px;"><b>Presentations:</b> University of Utah, Northeastern University.</p>
 	      
@@ -111,7 +111,7 @@
 
 	<h3> Published and Forthcoming Papers</h3>
 	<p style="margin:0;margin-bottom: -0px;"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3510359"><b>ETF Sampling and Index Arbitrage</b></a> &nbsp (Updated April 2025)<br>
-		with <a href="https://brogaard.utah.edu/">Jonathan Brogaard</a> and <a href="https://davidsontheath.github.io/">Davidson Heath</a>, Forthcoming, <b><i>Journal of Financial and Quantitative Analysis </i></b> &nbsp &nbsp &nbsp<button class="accordion">Abstract</button> </p>
+		with <a href="https://brogaard.utah.edu/">Jonathan Brogaard</a> and <a href="https://davidsontheath.github.io/">Davidson Heath</a>, Forthcoming, <b>Journal of Financial and Quantitative Analysis </b> &nbsp &nbsp &nbsp<button class="accordion">Abstract</button> </p>
 		<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"> This paper shows that exchange-traded funds (ETFs) "sample" their indexes, systematically underweighting or omitting illiquid index stocks. As a result, arbitrage activity between the ETF and its index has heterogeneous effects on underlying asset markets. Using an instrumental variables approach, we find that the trading activity of ETFs reduces liquidity and price efficiency and increases volatility and co-movement for liquid stocks, but has no effect on illiquid stocks. Our results demonstrate that the effects of passive investing on asset markets depend on how passive funds replicate their target index. </div> 
 	<p style="margin:0;margin-bottom: 30px;"><b>Presentations:</b> IEX Academic Conference 2019, University of Utah, Financial Management Association 2021, European Finance Association 2021, American Finance Association 2022. </p>
 
