--- a/research.html
+++ b/research.html
@@ -81,7 +81,7 @@
 	<p style="margin:0;margin-bottom: -0px;"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5200592"><b>All Shareholder Votes Are Not Created Equal</b></a> &nbsp (Updated June 2025) <br> 
 		with <a href="https://davidsontheath.github.io/">Davidson Heath</a> and <a href="https://chong-shu.com/">Chong Shu</a> &nbsp &nbsp &nbsp<button class="accordion">Abstract</button></p>
 		<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"> Do firm managers listen more to some shareholders than others? We show that directors facing the same level of dissent are twice as likely to leave the board when the dissent originates from active fund shareholders rather than passive ones. This phenomenon is driven by the stronger disciplinary threat posed by active funds rather than by any informational advantage. As a result, despite the large holdings of the "Big Three" passive asset managers, we find that their votes carry the same weight as those of an average active fund. Our findings highlight that shareholder democracy depends not only on the vote tally, but also on who casts the votes. </div> 
-	<p style="margin:0;margin-bottom: 30px;"><b>Presentations:</b> Northeastern University, RCFS Winter Finance Conference 2025, Drexel Corporate Governance Conference 2025, SFS Cavalcade North America 2025. </p>
+	<p style="margin:0;margin-bottom: 30px;"><b>Presentations:</b> Northeastern University, RCFS Winter Finance Conference 2025, Drexel Corporate Governance Conference 2025, SFS Cavalcade North America 2025, Northern Finance Association 2025. </p>
 
 
 	<p style="margin:0;margin-bottom: -0px;"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4275724"><b>Technology, Cybersecurity, and Cryptocurrency Returns</b></a> &nbsp (Updated June 2025) <br> 
@@ -93,7 +93,7 @@
 	<p style="margin:0;margin-bottom: -0px;"><a href="https://dahuang-finance.github.io/research.html"><b>Active ETFs as Attention Assets: Retail Trading Meets Managed Funds</b></a> &nbsp (Updated June 2025)<br>
 		with <a href="https://sites.google.com/view/vasudhanair/home">Vasudha Nair</a> and <a href="https://merage.uci.edu/research-faculty/faculty-directory/Christopher-Schwarz.html">Chris Schwarz</a>  &nbsp &nbsp &nbsp<button class="accordion">Abstract</button> </p>
 		<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"> Active exchange-traded funds (AETFs) have grown rapidly while traditional actively managed funds have declined. While AETFs have negative alphas and no performance persistence like their other actively managed peers, we find AETFs have taken advantage of the explosion in retail trading. Investors trade AETFs more like stocks than managed funds, leading to a U-shaped flow-performance relation as well as more convexity, especially over short performance horizons. Managers respond by taking high risks to generate extreme returns to attract flows. Overall, our results show AETFs exploit the behavioral biases that retail equity traders suffer from.   </div> 
-	<p style="margin:0;margin-bottom: 30px;"><b>Presentations:</b> Northeastern University, ICI Summer Research Workshop. </p> 
+	<p style="margin:0;margin-bottom: 30px;"><b>Presentations:</b> Northeastern University, ICI Summer Research Workshop 2025. </p> 
 
 
 	<h3> Published and Forthcoming Papers</h3>
