--- a/research.html
+++ b/research.html
@@ -91,7 +91,7 @@
 
 	<h3> Work-in-Progress Papers (available upon request)</h3>
 	<p style="margin:0;margin-bottom: -0px;"><a href="https://dahuang-finance.github.io/research.html"><b>Active ETFs as Attention Assets: Retail Trading Meets Managed Funds</b></a> &nbsp (Updated June 2025)<br>
-		with <a href="https://sites.google.com/view/vasudhanair/home">Vasudha Nair</a> and <a href="https://merage.uci.edu/research-faculty/faculty-directory/Christopher-Schwarz.html">Chris Schwarz</a>  &nbsp &nbsp &nbsp<button class="accordion">Abstract</button> </p>
+		with <a href="https://www.vasudhanair.com">Vasudha Nair</a> and <a href="https://merage.uci.edu/research-faculty/faculty-directory/Christopher-Schwarz.html">Chris Schwarz</a>  &nbsp &nbsp &nbsp<button class="accordion">Abstract</button> </p>
 		<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"> Active exchange-traded funds (AETFs) have grown rapidly while traditional actively managed funds have declined. While AETFs have negative alphas and no performance persistence like their other actively managed peers, we find AETFs have taken advantage of the explosion in retail trading. Investors trade AETFs more like stocks than managed funds, leading to a U-shaped flow-performance relation as well as more convexity, especially over short performance horizons. Managers respond by taking high risks to generate extreme returns to attract flows. Overall, our results show AETFs exploit the behavioral biases that retail equity traders suffer from.   </div> 
 	<p style="margin:0;margin-bottom: 30px;"><b>Presentations:</b> Northeastern University, ICI Summer Research Workshop 2025. </p> 
 
