--- a/research.html
+++ b/research.html
@@ -88,7 +88,7 @@
 	<p style="margin:0;margin-bottom: -0px;"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4275724"><b>Technology, Cybersecurity, and Cryptocurrency Returns</b></a> &nbsp (Updated June 2025) <br> 
 		with <a href="https://jeffreytyang.github.io/">Jeffrey Yang</a> &nbsp &nbsp &nbsp<button class="accordion">Abstract</button></p>
 		<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"> Are cryptocurrencies mere speculative bubbles, or do their returns reflect the quality of their underlying technology? To address this question, we examine crypto technological flaws leading to cybersecurity exposures. Technological flaws in the underlying technology of cryptos, their publicly visible source code on GitHub, are bugs documented by developers to be fixed later. We find that one flaw predicts a 7 basis point decrease in the coin's daily return. A portfolio that longs no-flaw coins and shorts high-flaw ones, which we term the “cybersecurity factor,” earns 30 basis points daily. Our results demonstrate that cryptocurrency returns reflect the quality of their underlying technology. </div>
-	<p style="margin:0;margin-bottom: 30px;"><b>Presentations:</b> University of Utah, Future of Financial Information Conference 2025. </p>
+	<p style="margin:0;margin-bottom: 30px;"><b>Presentations:</b> University of Utah, Future of Financial Information Conference 2025, Financial Management Association 2025. </p>
 
 	<h3> Work-in-Progress Papers (available upon request)</h3>
 	<p style="margin:0;margin-bottom: -0px;"><a href="https://dahuang-finance.github.io/research.html"><b>Active ETFs as Attention Assets: Retail Trading Meets Managed Funds</b></a> &nbsp (Updated June 2025)<br>
