--- a/research.html
+++ b/research.html
@@ -85,16 +85,20 @@
 	<b>Media Mentions:</b> <a href="https://www.ecgi.global/publications/blog/all-shareholder-votes-are-not-created-equal-why-some-investors-votes-matter-more/">ECGI</a> </p>
 
 
-	<p style="margin:0;margin-bottom: -0px;"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4275724"><b>Technology, Cybersecurity, and Cryptocurrency Returns</b></a> &nbsp (Updated June 2025) <br> 
-		with <a href="https://jeffreytyang.github.io/">Jeffrey Yang</a> &nbsp &nbsp &nbsp<button class="accordion">Abstract</button></p>
-		<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"> Are cryptocurrencies mere speculative bubbles, or do their returns reflect the quality of their underlying technology? To address this question, we examine crypto technological flaws leading to cybersecurity exposures. Technological flaws in the underlying technology of cryptos, their publicly visible source code on GitHub, are bugs documented by developers to be fixed later. We find that one flaw predicts a 7 basis point decrease in the coin's daily return. A portfolio that longs no-flaw coins and shorts high-flaw ones, which we term the “cybersecurity factor,” earns 30 basis points daily. Our results demonstrate that cryptocurrency returns reflect the quality of their underlying technology. </div>
+	<p style="margin:0;margin-bottom: -0px;"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5426235"><b>The Coevolution of Technology and Prices in Cryptocurrencies</b></a> &nbsp (Updated September 2025) <br> 
+		with <a href="https://sites.google.com/view/randuchin">Ran Duchin</a> and <a href="https://jeffreytyang.github.io/">Jeffrey Yang</a>  &nbsp &nbsp &nbsp<button class="accordion">Abstract</button></p>
+		<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"> This paper studies the joint dynamics of cryptocurrency technology, returns, and labor markets for developers. We construct high-frequency measures of GitHub bug reports ("Technology Flaws") and code commits ("Technology Development") for major coins. The main results are twofold. First, a new Technology Flaw predicts a 7 bp drop in next-day returns without future reversals. Second, a 1% decrease in coin valuation leads to a 0.14% decrease in Technology Development labor. These findings suggest that technology is a fundamental factor in cryptocurrency prices, and that prices and technology development coevolve through a bidirectional feedback mechanism. </div>
 	<p style="margin:0;margin-bottom: 30px;"><b>Presentations:</b> University of Utah, Future of Financial Information Conference 2025. </p>
 
-	<h3> Work-in-Progress Papers (available upon request)</h3>
-	<p style="margin:0;margin-bottom: -0px;"><a href="https://dahuang-finance.github.io/research.html"><b>Active ETFs as Attention Assets: Retail Trading Meets Managed Funds</b></a> &nbsp (Updated June 2025)<br>
+
+	<p style="margin:0;margin-bottom: -0px;"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5426275"><b>Active ETFs as Attention Assets: Retail Trading Meets Managed Funds</b></a> &nbsp (Updated September 2025)<br>
 		with <a href="https://www.vasudhanair.com">Vasudha Nair</a> and <a href="https://merage.uci.edu/research-faculty/faculty-directory/Christopher-Schwarz.html">Chris Schwarz</a>  &nbsp &nbsp &nbsp<button class="accordion">Abstract</button> </p>
-		<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"> Active exchange-traded funds (AETFs) have grown rapidly while traditional actively managed funds have declined. While AETFs have negative alphas and no performance persistence like their other actively managed peers, we find AETFs have taken advantage of the explosion in retail trading. Investors trade AETFs more like stocks than managed funds, leading to a U-shaped flow-performance relation as well as more convexity, especially over short performance horizons. Managers respond by taking high risks to generate extreme returns to attract flows. Overall, our results show AETFs exploit the behavioral biases that retail equity traders suffer from.   </div> 
+		<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"> Active exchange-traded funds (AETFs) have grown rapidly despite the decline of poor-performing active mutual funds (AMFs). AETFs' growth, however, is not due to superior performance. In fact, AETFs have significantly worse performance than AMFs. Rather, AETFs are taking advantage of the attention-driven trading behavior of retail investors. Similar to equity investors, AETF investors chase extreme short-term returns, both positive and negative, while long-term flows have no response to underperformance. Managers respond to these payoffs by taking high risks to generate extreme returns. 
+Overall, our results show how active management has responded to the decline of their traditional distribution channel.   </div> 
 	<p style="margin:0;margin-bottom: 30px;"><b>Presentations:</b> Northeastern University, ICI Summer Research Workshop 2025, Financial Management Association 2025. </p> 
+
+<!-- 	<h3> Work-in-Progress Papers (available upon request)</h3> -->
+
 
 
 	<h3> Published and Forthcoming Papers</h3>
