--- a/research.html
+++ b/research.html
@@ -108,7 +108,7 @@ Overall, our results show how active management has responded to the decline of 
 	<p style="margin:0;margin-bottom: 30px;"><b>Presentations:</b> IEX Academic Conference 2019, University of Utah, Financial Management Association 2021, European Finance Association 2021, American Finance Association 2022. </p> 
 
 	<p style="margin:0;"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3961574"><b>[1] Non-Standard Errors</b></a> <br> 
-		Crowd-sourced project led by Albert Menkveld with <a href="https://fincap.academy/">#fincap</a>, <b>Journal of Finance.  </b> Vol 79 Issue 3 (June 2024), pp. 2339-2390.   &nbsp &nbsp &nbsp<button class="accordion">Abstract</button>
+		Crowd-sourced project led by Albert Menkveld with <a href="https://fincap.academy/">#fincap</a>, <b>Journal of Finance.  </b> Vol 79, Issue 3 (June 2024), pp. 2339-2390.   &nbsp &nbsp &nbsp<button class="accordion">Abstract</button>
 		<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"> In statistics, samples are drawn from a population in a data-generating process (DGP). Standard errors measure the uncertainty in sample estimates of population parameters. In science, evidence is generated to test hypotheses in an evidence-generating process (EGP). We claim that EGP variation across researchers adds uncertainty: non-standard errors. To study them, we let 164 teams test six hypotheses on the same sample. We find that non-standard errors are sizeable, on par with standard errors. Their size (i) co-varies only weakly with team merits, reproducibility, or peer rating, (ii) declines significantly after peer-feedback, and (iii) is underestimated by participants. </div></p>
 
 
