--- a/teaching.html
+++ b/teaching.html
@@ -31,9 +31,9 @@
         <h3><a id="updates" class="anchor" href="#updates" aria-hidden="true"><span class="octicon octicon-link"></span></a>University of Utah:</h3>
 	<p> <b>FINAN 3050 - Introduction to Investments</b> </p>
 	<p> I taught the course under a hybrid format in Spring 2021. The class is designed to familiarize undergraduate finance students with introductory finance theory and practice from the point of view of a portfolio manager. Topics covered in the class include Capital Asset Pricing Model (CAPM), Markowitz optimization, performance evaluation, mutual funds, market efficiency, etc.  </p>
-	<br>
+	<!-- <br>
 	<p> <b>FINAN 6122 - Advanced Finance</b> </p>
-	<p> This course applies in a case-based setting several of the core concepts of finance for executive MBAs. <a href="https://brogaard.utah.edu/teaching/">Jonathan Brogaard</a> and I coauthored a case study about smart beta and factor investing for the class. Please contact us if you are interested in using it in your class.   </p>
+	<p> This course applies in a case-based setting several of the core concepts of finance for executive MBAs. <a href="https://brogaard.utah.edu/teaching/">Jonathan Brogaard</a> and I coauthored a case study about smart beta and factor investing for the class. Please contact us if you are interested in using it in your class.   </p> -->
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
