--- a/teaching.html
+++ b/teaching.html
@@ -26,7 +26,7 @@
         <h3><a id="updates" class="anchor" href="#updates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Northeastern University:</h3>
 	<p> <b>FINA 3303 - Investments</b> </p>
 	<p> The class is designed to familiarize undergraduate finance students with introductory finance theory and practice from the point of view of a portfolio manager. Topics covered in the class include Capital Asset Pricing Model (CAPM), Markowitz optimization, performance evaluation, mutual funds, market efficiency, etc.  </p>
-	<p> A sample of recent student evaluation can be found <a href="https://dahuang-finance.github.io/teaching/FINAN3050/trace.pdf">here </a>. </p>
+	<p> A sample of recent student evaluation can be found <a href="https://dahuang-finance.github.io/teaching/FINAN3050/trace.pdf" target="_blank" rel="noopener noreferrer>here </a>. </p>
 	<br>
         <h3><a id="updates" class="anchor" href="#updates" aria-hidden="true"><span class="octicon octicon-link"></span></a>University of Utah:</h3>
 	<p> <b>FINAN 3050 - Introduction to Investments</b> </p>
